# django-deprecated-field

./: LICENSE  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yaml  tests.yaml
deprecated_field/: __init__.py  expressions.py  fields.py  utils.py
tests/: models.py  settings.py
tests/migrations/: 0001_initial.py  0002_deprecate_title.py  0003_deprecate_artist.py
tests/tests/: test_migrations.py  test_models.py  test_queries.py
