[tool.poetry]
name = "django-deprecated-field"
version = "0.1.0"
description = "A Django utility to safely remove database fields"
authors = ["Sigurd Ljødal <544451+ljodal@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">3.1,<3.3"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.2"
flake8-bugbear = "^21.4.3"
mypy = "^0.910"
django-stubs = "^1.8.0"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
nox = "^2021.6.12"
nox-poetry = "^0.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
DJANGO_SETTINGS_MODULE = "tests.settings"
